chore: add cloudflare pages build config

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "pages:build": "npx @cloudflare/next-on-pages",
     "start": "next start",
     "lint": "next lint"
   },
@@ -19,6 +20,7 @@
     "recharts": "^3.7.0"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.16",
     "@types/node": "^22.14.0",
     "@types/react": "^19.2.11",
     "@types/react-dom": "^19.2.3",
