--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
-    "eslint-config-next": "^16.1.6",
+    "eslint-config-next": "15.1.0",
     "lucide-react": "^0.563.0",
-    "next": "^16.1.6",
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
+    "next": "15.1.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-is": "^19.0.0",
     "recharts": "^3.7.0"
   },
   "devDependencies": {
